--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic
 title: Brian's Blog | 布莱恩部落
-subtitle: A blog-orientation theme for Jekyll
+subtitle: With the Code, Change the World !
 # welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
-description: With the Code, Change the World !
+description: 混迹于互联网的一名iOS杂工，初窥门径的技术管理学习者，记录思考点滴 ~
 creator: <a href="https://brianbowu.github.io">@brianbowu</a>
 
 url: "https://brianbowu.github.io"
